--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,8 +4,8 @@
         "persistent": false,
         "scripts": ["background.js"]
     },
-    "name": "'gram Downloader",
-    "description": "Save images from Instagram.",
+    "name": "Photo Downloader",
+    "description": "Save images from social photo sites.",
     "icons": {
         "128": "icon-128.png"
     },
@@ -21,5 +21,5 @@
         "activeTab",
         "downloads"
     ],
-    "version": "1.0.4"
+    "version": "1.1"
 }
